--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@vercel/analytics": "^1.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.8",
