--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -29,6 +30,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.8",
     "google-one-tap": "^1.0.6",
+    "html-react-parser": "^5.2.1",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "prisma": "^5.21.1",
