--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -17,10 +18,12 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@react-google-maps/api": "^2.20.3",
     "@supabase/ssr": "^0.5.1",
@@ -36,13 +39,14 @@
     "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "recharts": "^2.13.0",
     "schema-dts": "^1.1.2",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "use-places-autocomplete": "^4.0.1",
-    "zod": "^3.23.8",
+    "zod": "^3.24.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
